<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity_main.RegistrationFragment">
    <TextView
        android:id="@+id/tv_singig"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singin"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:shadowColor="@color/shadow_text"
        android:shadowDx="8"
        android:shadowDy="15"
        android:shadowRadius="10"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"/>
    <LinearLayout
        android:id="@+id/ll_password"
        app:layout_constraintTop_toBottomOf="@id/tv_singig"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded"
        android:layout_marginVertical="70dp"
        android:layout_marginHorizontal="40dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="40dp">
        <TextView
            android:id="@+id/tv_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            android:textColor="@color/black"
            android:textAlignment="center" />
        <EditText
            android:id="@+id/et_enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints=""
            android:background="@drawable/welcome_password_field"
            android:inputType="textPassword"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"
            android:hint="@string/password"/>
        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginVertical="5dp"
            android:textColor="@color/black"
            android:textAlignment="center" />
        <TextView
            android:background="@drawable/text_pressed_bg"
            android:id="@+id/tv_use_biometrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_biom"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:textAlignment="center" />
    </LinearLayout>
    <Button
        android:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/ll_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_pressed"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:textSize="20sp"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>