<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity_main.RegistrationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout_welcome">
    <TextView
        android:id="@+id/tv_welcome"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="center"
        android:shadowColor="@color/shadow_text"
        android:shadowDx="8"
        android:shadowDy="15"
        android:shadowRadius="10"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"/>
    <LinearLayout
        android:id="@+id/ll_password"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="40dp">
        <TextView
            android:id="@+id/tv_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crete_password"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:lines="2"/>
        <EditText
            android:id="@+id/et_create_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/welcome_password_field"
            android:inputType="textPassword"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"
            android:hint="@string/password"/>
    </LinearLayout>
    <Button
        app:layout_constraintTop_toBottomOf="@id/ll_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        android:alpha="0"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_pressed"
        android:id="@+id/btn_create_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="20sp"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>