<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout_profile"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardActivity"
    android:background="@drawable/bg_profile_activity">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_profiles"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_big"
        app:layout_constraintBottom_toTopOf="@+id/settingsInProfile"
        android:orientation="vertical">
        <!--<TextView
            android:id="@+id/text_nocards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="No cards added"/> -->
    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/profile_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/account_gradient_v2"
        />
    <!--<Button
        android:id="@+id/plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/plusbutton"
        android:backgroundTint="@color/black"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="40dp"/> -->

    <FrameLayout
        android:id="@+id/layout_plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/plus_button"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@drawable/plusbutton"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/plus_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/plus_icon"
            android:layout_gravity="center"/>
    </FrameLayout>

    <ImageButton
        android:id="@+id/settingsInProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/round"
        android:padding="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <FrameLayout
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/angle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/angle_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/angle"
            android:layout_gravity="center"/>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/right_button"
        app:layout_constraintLeft_toLeftOf="@+id/right_button"
        app:layout_constraintBottom_toTopOf="@+id/right_button"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:background="@drawable/oval"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        >
        <ImageView
            android:onClick="toCards"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/card"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            />
        <ImageView
            android:onClick="toAccounts"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/account"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            />
        <ImageView
            android:onClick="toIdent"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/identity"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            />
        <ImageView
            android:onClick="toNotes"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/notes"
            android:paddingStart="15dp"
            android:paddingEnd="12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_menu"
        android:orientation="vertical"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/add_layout_background"
        android:padding="20dp"
        android:divider="@drawable/divider_10dp"
        android:showDividers="middle">
        <LinearLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_text_input"
            android:id="@+id/ll_source">
            <EditText
                android:layout_marginHorizontal="15dp"
                android:id="@+id/et_source"
                android:hint="@string/source"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
        <LinearLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_text_input">
            <EditText
                android:layout_marginHorizontal="15dp"
                android:id="@+id/et_login"
                android:hint="@string/login"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
        <LinearLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_text_input">
            <EditText
                android:layout_marginHorizontal="15dp"
                android:id="@+id/et_password"
                android:hint="@string/password"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
        <LinearLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/ll_info"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/add_text_input">
            <EditText
                android:gravity="top"
                android:layout_margin="15dp"
                android:background="@null"
                android:hint="@string/other_information"
                android:id="@+id/et_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:id="@+id/add_button_profile"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/add_button_text"
            android:background="@drawable/add_button"
            android:onClick="addProfile"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>